Fix sliders background overflow (#2708)

--- a/gtk/src/default/gtk-4.0/_tweaks.scss
+++ b/gtk/src/default/gtk-4.0/_tweaks.scss
@@ -363,6 +363,7 @@ list row, placessidebar row, sidebar row, .sidebar row {
     &:not(:backdrop):not(:disabled){
         > slider {
           background-image: image($warm_gray);
+          background-clip: padding-box; // fix background overflow
         }
 
         &:hover {
